IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/17/08: Changed Tlitxcorr to allow 8Kx8K images.

1/13/08: Fixed some problems with Zap window cursor with multiple windows.

1/10/08: Fixed Ccderaser to scale the model file to pixel coordinates on the
current stack even if the model came from a binned stack.

1/9/08: Fixed error from closing file twice with clip splitrgb.

1/8/08: Edpiecepoint can now be used to generate a piece list for a montage.

1/8/08: Fixed contour sort routine and made it work from 3D distances.

12/28/07: IMOD_3-11-1
12/28/07: All documentation updated.

12/27/07: Added an option to extracttilts to give a warning if the tilt angles
are suspicious; made copytomocoms use the option.

12/21/07: IMOD_3-12-0 and branch to IMOD_3-11-0
12/17/07: IMOD_3-10-24
12/17/07: Nicing processchunks when using a queue.

12/17/07: Modified PEET interface to handle a change in a flag definition 
in PEET.

12/13/07: Provided renamed executables and script wrappers for patch2imod
and imod2patch since Vista decided they were dangerous.

12/12/07: IMOD_3-10-23
12/12/07: Automatically running newstack, blendmont, and tilt with
AdjustOrigin. For a single axis tomogram created prior to this change, trimvol
will be run the option "-k" which prevents the origin adjustment.
ALL MACHINES USED FOR PARALLEL PROCESSING MUST BE UPGRADED TOGETHER.

12/12/07: Fixed panning in Xyz window from getting stuck at one end.

12/12/07: Made Solvematch compute the scaling along each of the three axes and
issue a warning if the scaling is not isotropic within 10%.

12/11/07: Removed warning from Tiltalign when solving for a single X tilt
variable plus rotation.

12/10/07: Fixed processchunks failure when it read a long error message from
nad_eed_3d, improved argument processing in nad_eed_3d to detect missing 
values after options.

12/10/07: Processchunks Resume will work after exiting and rerunning eTomo even