@@ -38,7 +38,10 @@ objects, use the Edit - Object List menu entry to bring up a complete Object
 List window.
 <P>
 The <B>Draw Data Type</B> option selects which type of data to draw.
-You can select to draw contour data, mesh data or no data at all.
+You can select to draw contour data or mesh data.  There is also an entry
+to turn drawing <B>Off</B>, and an entry to turn the drawing back <B>On</B>
+without having to select contour or mesh type.  The latter is useful when you
+want to turn all items back on after turning them off.
 <P>
 The <B>Drawing Style</B> option selects the drawing style.
 You can select between drawing points, lines, filled or
